feat: 게시글 비활성화 수정